marcsellocorp-bot/marcsellocorp-bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marcsellocorp-bot
  namespace: marcsellocorp-bot
  labels:
    app: marcsellocorp-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marcsellocorp-bot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: marcsellocorp-bot
    spec:
      containers:
        - name: marcsellocorp-bot
          image: marcsello/marcsellocorp-bot:12
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
