marcsellocorp-bot/marcsellocorp-bot-callback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marcsellocorp-bot-callback-svc
  namespace: marcsellocorp-bot
  labels:
    app: marcsellocorp-bot
spec:
  type: ClusterIP
  ports:
    - name: marcsellocorp-bot
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: marcsellocorp-bot
