marcsellocorp-bot/marcsellocorp-bot-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marcsellocorp-bot-redis-svc
  namespace: marcsellocorp-bot
  labels:
    app: marcsellocorp-bot-redis
spec:
  selector:
    app: marcsellocorp-bot-redis
  ports:
    - name: marcsellocorp-bot-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
