marcsellocorp-bot/marcsellocorp-bot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marcsellocorp-bot-ingress
  namespace: marcsellocorp-bot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/revision-history-limit: "2"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "10"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "240"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "240"
spec:
  tls:
    - hosts:
        - callback.marcsellocorp-telegram-bot.k8s.marcsello.com
        - api.marcsellocorp-telegram-bot.k8s.marcsello.com
      secretName: letsencrypt
  rules:
    - host: callback.marcsellocorp-telegram-bot.k8s.marcsello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marcsellocorp-bot-callback-svc
                port:
                  number: 80
    - host: api.marcsellocorp-telegram-bot.k8s.marcsello.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marcsellocorp-bot-api-svc
                port:
                  number: 80
